[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/Hazards/TempPogoPoint.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]
radius = 3.0

[sub_resource type="ParticlesMaterial" id=2]
lifetime_randomness = 0.2
emission_shape = 1
emission_sphere_radius = 3.0
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 2.0
orbit_velocity_random = 0.5
color = Color( 0.262745, 0.321569, 0.239216, 1 )

[sub_resource type="ParticlesMaterial" id=3]
lifetime_randomness = 0.01
emission_shape = 1
emission_sphere_radius = 3.0
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 100.0
initial_velocity_random = 0.1
orbit_velocity = 0.0
orbit_velocity_random = 0.0
color = Color( 0.262745, 0.321569, 0.239216, 1 )

[sub_resource type="ParticlesMaterial" id=4]
lifetime_randomness = 0.01
emission_shape = 1
emission_sphere_radius = 10.0
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity_random = 0.1
orbit_velocity = 0.0
orbit_velocity_random = 0.0
radial_accel = -100.0
color = Color( 0.262745, 0.321569, 0.239216, 1 )

[sub_resource type="Animation" id=5]
resource_name = "Burst"
length = 4.0
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3.5, 3.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "Burst"
}, {
"args": [  ],
"method": "Respawn"
}, {
"args": [  ],
"method": "Respawned"
} ]
}

[sub_resource type="CircleShape2D" id=6]
radius = 3.0

[node name="TempPogoPoint" type="StaticBody2D"]
collision_layer = 2
collision_mask = 0
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Particles2D" type="Particles2D" parent="."]
amount = 100
lifetime = 0.1
process_material = SubResource( 2 )

[node name="BurstParticles" type="Particles2D" parent="."]
emitting = false
amount = 100
lifetime = 0.2
one_shot = true
explosiveness = 1.0
process_material = SubResource( 3 )

[node name="RespawnParticles" type="Particles2D" parent="."]
emitting = false
amount = 100
lifetime = 0.5
one_shot = true
explosiveness = 1.0
process_material = SubResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Burst = SubResource( 5 )

[node name="PogoDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="PogoDetector"]
shape = SubResource( 6 )

[connection signal="area_entered" from="PogoDetector" to="." method="_on_PogoDetector_area_entered"]
